--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "actions-on-google": "^2.13.0",
+    "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
     "nodemon": "^2.0.7"
